data/derived/comb/progs/unify/prog8258.ml.out
Characters 306-328:
  else (car+1, [carry (h+x1+x2)]@[(h+x1+x2) mod 10] @ t) in
                                 ^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type (int -> int) list
       Type int is not compatible with type int -> int 
